# case_cars

./: .gitignore  README.md  pyproject.toml
notebooks/: descritiva.ipynb
src/: abt.ipynb  predict.ipynb  train.ipynb
