[tool.poetry]
name = "cars"
version = "0.1.0"
description = ""
authors = ["lzanforlin <lrzanforlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
statistics = "^1.0.3.5"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
patsy = "^0.5.6"
scikit-learn = "^1.4.2"
plotly = "^5.20.0"
graphviz = "^0.20.3"
statsmodels = "^0.14.1"
nbformat = "^4.2.0"
xgboost = "^2.0.3"
pydot-ng = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
